<resources>
    <string name="app_name">Student Detect USK</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo">TODO</string>
    <string name="title1">Student Detect</string>
    <string name="title2">Syiah Kuala University</string>
    <string name="by1">Created by</string>
    <string name="by2"><![CDATA[Risma Kurniawaty & Maulana Hizbullah]]></string>
</resources>